# random-tools

./: AUTHORS  INSTALL  LICENSE.txt  Makefile.am  Makefile.in  aclocal.m4  config-win32.h  config.h.in  configure  configure.ac  dist.cmd  mkdeb.sh  random.sln
TestU01/include/: addstr.h  bbattery.h  bitset.h  chrono.h  config.h  fbar.h  fcho.h  fcong.h  fdist.h  ffam.h  ffsr.h  finv.h  fknuth.h  fmarsa.h  fmass.h  fmultin.h  fnpair.h  fres.h  fspectral.h  fstring.h  ftab.h  fvaria.h  fwalk.h  gdef.h  gdefconf.h  gofs.h  gofw.h  mystr.h  num.h  num2.h  rijndael-alg-fst.h  scatter.h  scomp.h  sentrop.h  sknuth.h  smarsa.h  smultin.h  snpair.h  sres.h  sspacings.h  (+37 more)
TestU01/mylib/: bitset.c  chrono.c  num.c  num2.c  util.c
TestU01/probdist/: fbar.c  fdist.c  finv.c  fmass.c  gofs.c  gofw.c  statcoll.c  wdist.c
TestU01/testu01/: bbattery.c  fftc.c  fknuth.c  fmarsa.c  fmultin.c  fnpair.c  fres.c  fspectral.c  fstring.c  ftab.c  fvaria.c  fwalk.c  scatter.c  scomp.c  sentrop.c  sknuth.c  smarsa.c  smultin.c  snpair.c  sspacings.c  sspectral.c  sstring.c  svaria.c  swalk.c  swrite.c  ubrent.c  ubrent.h  ucarry.c  ucryptoIS.c  ufile.c  ulcg.c  ulec.c  umrg.c  unif01.c  uquad.c  vectorsF2.c  vectorsF2.h
bin2asc/: bin2asc.cpp  bin2asc.vcproj
bin2bits/: bin2bits.cpp  bin2bits.vcproj
bzip2-1.0.5/: libbz2.vcproj
chisqtable/: chisqtab.cpp  chisqtable.vcproj
ct-lotto/: Makefile.am  Makefile.in  config.h.in  ct-lotto.cpp  ct-lotto.vcproj
ct-randcam/: Makefile.am  Makefile.in  Masher.cpp  Masher.h  config.h.in  ct-randcam.cpp  ct-randcam.vcproj  disclaimer.cpp  globals.h
ct-randcam/md5/: README  md5_loc.h
ct-rng/: Makefile.am  Makefile.in  ct-rng.cpp  ct-rng.vcproj  padlock.h
ct-rng-analyzer/: Makefile.am  Makefile.in  config.h.in  ct-rng-analyzer.c  ct-rng-analyzer.vcproj
ct-rng-assessor/: Makefile.am  Makefile.in  benchmark.cpp  benchmark.h  configure.ac  ct-rng-assessor.cpp  ct-rng-assessor.h  ct-rng-assessor.vcproj  rng_assess.cpp  test-autocorrelation.cpp  test-bzip2.cpp  test-couponcollector.cpp  test-entropy.cpp  test-frequency.cpp  test-gap.cpp  test-maxt.cpp  test-monobit.cpp  test-monte-carlo-pi.cpp  test-permutation.cpp  test-poker-fips.cpp  test-poker.cpp  test-runs-fips.cpp  test-runs.cpp  test-serial.cpp  tests.h
ct-rng-server/: BufferFile.h  Makefile  ct-rng-server.cpp
gen_cmdline/: configure.ac  gen  gen_cmdline.vcproj  gen_cmdline_main.cpp  via_ace.h
getopt/: getopt.c  getopt.h  getopt.vcproj  getopt_long.c
lotto/: Makefile.am  Makefile.in  lotto.cpp  lotto.vcproj
m4/: boost.m4  gmp.m4  opencv.m4  padlock.m4  testu01.m4
pfeil-und-bogen/: Makefile  pfeil-und-bogen.cpp
randcam/: Makefile.am  Makefile.in  Masher.cpp  Masher.h  configure.ac  ct-randcam.cpp  disclaimer.cpp  entropy.cpp  globals.h  randcam.cpp  randcam.vcproj
randcam/md5/: Makefile  md5.cpp  md5.h
rng/: Makefile.am  Makefile.in  config.h.in  configure.ac  padlock_rng.cpp  rng.cpp  rng.vcproj
rng-analyzer/: Makefile.am  Makefile.in  configure.ac  rng-analyzer.c  rng-analyzer.vcproj
rng-assessor/: Makefile.am  Makefile.in  benchmark.cpp  benchmark.h  config.h.in  ct-rng-assessor.cpp  rng-assessor.cpp  rng-assessor.h  rng-assessor.vcproj  rng_assess.cpp  test-autocorrelation.cpp  test-birthdayspacings.cpp  test-bzip2.cpp  test-collision.cpp  test-couponcollector.cpp  test-entropy.cpp  test-frequency.cpp  test-gap.cpp  test-maxt.cpp  test-monobit.cpp  test-monte-carlo-pi.cpp  test-permutation.cpp  test-poker-fips.cpp  test-poker.cpp  test-runs-fips.cpp  test-runs.cpp  test-serial.cpp  tests.h
rng-server/: BufferFile.h
rng-server/rng-server/: ct-rng-server.cpp
rngdemo/: Makefile  rngdemo.cpp  rngdemo.vcproj
test/: Makefile.am  Makefile.in  autocorr.h  birthday.h  bitvector.h  chisq.cpp  chisq.h  collision.h  combinations.h  config.h.in  configure.ac  couponcollector.h  entropy.h  frequency.h  gap.h  math_functions.h  max-t.h  monobit.h  permutation.h  pi.h  poker-fips140-1.h  poker-knuth.h  poker.h  popcount.cpp  popcount.h  popcount.pl  run-above-below.h  run-fips140-1.h  run-up-down.h  serial.h  test.vcproj
testu01-mylib/: Makefile.am  Makefile.in  testu01-mylib.vcproj
testu01-probdist/: Makefile.am  Makefile.in  testu01-probdist.vcproj
testu01-testu01/: Makefile.am  Makefile.in  testu01-testu01.vcproj
threadpool/: Job.h  Mutex.h  MutexLocker.h  Semaphore.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  Thread_p.h  WaitCondition.h  WorkerThread.cpp  WorkerThread.h  threadpool.vcproj  threadpooltest.cpp
timer/: Makefile  timer.cpp  timer.h  timer.vcproj
