bin_PROGRAMS = ct-rng-assessor

AM_CPPFLAGS = @BOOST_CPPFLAGS@
AM_LDFLAGS = -L../test -lrngtest -lbz2

ct_rng_assessor_SOURCES = ct-rng-assessor.cpp 
ct_rng_assessor_SOURCES += test-birthdayspacings.cpp
ct_rng_assessor_SOURCES += test-frequency.cpp
ct_rng_assessor_SOURCES += test-monte-carlo-pi.cpp
ct_rng_assessor_SOURCES += test-runs.cpp
ct_rng_assessor_SOURCES += test-collision.cpp
ct_rng_assessor_SOURCES += test-gap.cpp
ct_rng_assessor_SOURCES += test-permutation.cpp
ct_rng_assessor_SOURCES += test-runs-fips.cpp
ct_rng_assessor_SOURCES += test-couponcollector.cpp
ct_rng_assessor_SOURCES += test-maxt.cpp
ct_rng_assessor_SOURCES += test-poker.cpp
ct_rng_assessor_SOURCES += test-serial.cpp
ct_rng_assessor_SOURCES += test-entropy.cpp
ct_rng_assessor_SOURCES += test-monobit.cpp
ct_rng_assessor_SOURCES += test-poker-fips.cpp
ct_rng_assessor_SOURCES += test-autocorrelation.cpp
ct_rng_assessor_SOURCES += test-bzip2.cpp

DEFAULT_INCLUDES = -I. -I..


distclean-local:



