lib_LIBRARIES=librngtest.a
librngtest_a_SOURCES=chisq.cpp
library_includedir=$(includedir)/rngtest
library_include_HEADERS=birthday.h math_functions.h poker-fips140-1.h run-up-down.h bitvector.h couponcollector.h max-t.h poker.h serial.h chisq.h entropy.h monobit.h poker-knuth.h collision.h frequency.h permutation.h run-above-below.h combinations.h gap.h pi.h run-fips140-1.h
