AC_INIT(chisq.cpp)
AM_CONFIG_HEADER(config.h)

GENERIC_LIBRARY_NAME=librng

GENERIC_MAJOR_VERSION=0
GENERIC_MINOR_VERSION=1
GENERIC_MICRO_VERSION=0

GENERIC_API_VERSION=1.0
AC_SUBST(GENERIC_API_VERSION)

GENERIC_LIBRARY_VERSION=0:1:0

AC_SUBST(GENERIC_LIBRARY_VERSION)

PACKAGE=$GENERIC_LIBRARY_NAME
AC_SUBST(GENERIC_LIBRARY_NAME)

GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION.$GENERIC_MICRO_VERSION
GENERIC_RELEASE=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION
AC_SUBST(GENERIC_RELEASE)
AC_SUBST(GENERIC_VERSION)

VERSION=$GENERIC_VERSION

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_CHECK_LIB(m, pow)
AC_LANG_CPLUSPLUS
AC_C_CONST
AC_C_INLINE
AC_HEADER_STDBOOL
AC_PROG_CC
AC_STRUCT_TM
AC_TYPE_SIZE_T
AM_SANITY_CHECK
AC_OUTPUT(Makefile)
