lib_LIBRARIES=libmylib.a
libmylib_a_SOURCES=../TestU01/mylib/addstr.c ../TestU01/mylib/bitset.c ../TestU01/mylib/chrono.c ../TestU01/mylib/gdef.c ../TestU01/mylib/mystr.c ../TestU01/mylib/num.c ../TestU01/mylib/num2.c ../TestU01/mylib/tables.c ../TestU01/mylib/tcode.c ../TestU01/mylib/util.c

DEFAULT_INCLUDES = -I. -I.. -I../TestU01/include
