lib_LIBRARIES=libprobdist.a
libprobdist_a_SOURCES=../TestU01/probdist/fbar.c ../TestU01/probdist/fdist.c ../TestU01/probdist/finv.c ../TestU01/probdist/fmass.c ../TestU01/probdist/gofs.c ../TestU01/probdist/gofw.c ../TestU01/probdist/statcoll.c ../TestU01/probdist/wdist.c

DEFAULT_INCLUDES = -I. -I.. -I../TestU01/include
